# game_controller

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf54lm20dk_nrf54lm20b_cpuapp.overlay  nrf54lm20dongle_nrf54lm20b_cpuapp.overlay
game/: controller.py  game.py
src/: common.h  main.c
src/ble/: ble_nus.c  ble_nus.h  game_command.h
src/engine/: engine.h  engine_controller.c  engine_controller.h  gesture_engine.c  kws_engine.c
src/gesture/: gesture.c  gesture.h
src/hw_modules/: button.h  leds.c  leds.h
src/kws/: dmic.c  dmic.h  kws.c  kws.h
